--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
         </div>
 
         <div id="navbarExampleTransparentExample" class="navbar-menu">
-            <div class="navbar-start">
+            <div class="navbar-end">
                 <a class="navbar-item" href="#begin">
                     Inicio
                 </a>
@@ -63,7 +63,12 @@
                 <h1 class="title">Quem somos ?</h1>
 
                 <p>
-                    O time mais mitico de toda a @BAZI, o time de IM
+                    A área de Information Management (IM) é a responsável principal pela gestão de plataformas com o objetivo de alavancar os
+                    resultados operacionais da AIESEC no Brasil. Nós somos responsáveis por toda a infraestrutura e integrações
+                    a nível nacional, além de nos comunicarmos diretamente com a AIESEC Internacional para trabalharmos em
+                    conjunto com a tecnologia global. Além de responsáveis principais pela gestão e evoluções dos nossos
+                    sites, também realizamos análises e extração de dados com o intuito de termos melhores direcionamentos
+                    para a rede. As frentes de IM são divididas entre três times.
                 </p>
             </div>
         </div>
@@ -95,8 +100,8 @@
                 </div>
                 <figure class="media-right">
                     <br>
-                    <p class="image is-256x256">
-                        <img src="https://bulma.io/images/placeholders/128x128.png" id="analise-team">
+                    <p class="image is-128x128">
+                        <img id="area-analise">
                     </p>
                 </figure>
             </article>
@@ -118,8 +123,8 @@
                     </div>
                 </div>
                 <figure class="media-right">
-                    <p class="image is-256x256">
-                        <img src="https://bulma.io/images/placeholders/128x128.png" id="pe-team">
+                    <p class="image is-128x128">
+                        <img id="area-pe">
                     </p>
                 </figure>
             </article>
@@ -142,12 +147,63 @@
                 </div>
                 <figure class="media-right">
                     <br>
-                    <p class="image is-256x256">
-                        <img src="https://bulma.io/images/placeholders/128x128.png" id="news-team">
+                    <p class="image is-128x128">
+                        <img id="area-news">
                     </p>
                 </figure>
             </article>
         </div>
+    </section>
+    <hr>
+    <h1 class="is-size-4  is-marginless is-uppercase has-text-centered">
+        Confere nosso HUB de aplicantes
+    </h1>
+    <section class="section">
+        <nav class="level">
+            <div class="level-item">
+                <figure class="image is-2by1">
+                    <a href="https://drive.google.com/open?id=1ax474Wy5MtL1x_mt3upJXbGgSRqfaj4_" target="_blank">
+                        <img id="analise-icx" alt="Analise de completeds ICX">
+                        <div class="overlay">
+                            <div class="text">Analise de completeds ICX</div>
+                        </div>
+                    </a>
+                </figure>
+            </div>
+            <div class="level-item">
+
+                <figure class="image is-2by1">
+                    <a href="https://drive.google.com/open?id=1MQKK7sLwUDNifF_UVmfg441W1P-L8v4g" target="_blank">
+                        <img id="analise-ogx" alt="Analise de completeds OGX">
+                        <div class="overlay">
+                            <div class="text">Analise de completeds OGX</div>
+                        </div>
+                    </a>
+                </figure>
+            </div>
+            <div class="level-item">
+
+                <figure class="image is-2by1">
+                    <a href="https://drive.google.com/open?id=1_E-pzBaCUlBn6Q1syDjoR1rPmF7jhkGP" target="_blank">
+                        <img id="analise-apicx" alt="Analise Applications ICX">
+                        <div class="overlay">
+                            <div class="text">Analise Applications ICX</div>
+                        </div>
+                    </a>
+                </figure>
+            </div>
+            <div class="level-item">
+
+                <figure class="image is-2by1">
+                    <a href="https://drive.google.com/open?id=1BwQNy4G4cVwSTRsezkEiDaJ6V6OaWJAd" target="_blank">
+                        <img id="analise-apogx" alt="Analise Applications OGX">
+                        <div class="overlay">
+                            <div class="text">Analise Applications OGX</div>
+                        </div>
+                    </a>
+                </figure>
+            </div>
+        </nav>
     </section>
     <hr>
     <div>
@@ -162,7 +218,7 @@
                                     <p class="heading has-text-centered">
                                         <figure class="image is-128x128">
                                             <img id="team-artur">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">TuTu</div>
                                             </div>
                                         </figure>
@@ -174,7 +230,7 @@
                                     <p class="title">
                                         <figure class="image is-128x128">
                                             <img id="team-bia">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Bia</div>
                                             </div>
                                         </figure>
@@ -186,7 +242,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-lucasp">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">LucasP</div>
                                             </div>
                                         </figure>
@@ -198,7 +254,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-lucast">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">lucasT</div>
                                             </div>
                                         </figure>
@@ -210,7 +266,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-manoel">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Maneco</div>
                                             </div>
                                         </figure>
@@ -222,7 +278,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-math">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Math</div>
                                             </div>
                                         </figure>
@@ -240,7 +296,7 @@
                                     <p class="heading has-text-centered">
                                         <figure class="image is-128x128">
                                             <img id="team-rodolfo">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Rodolfo</div>
                                             </div>
                                         </figure>
@@ -252,7 +308,7 @@
                                     <p class="title">
                                         <figure class="image is-128x128">
                                             <img id="team-pablo">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Pablo</div>
                                             </div>
                                         </figure>
@@ -264,7 +320,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-pelu">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Pelu</div>
                                             </div>
                                         </figure>
@@ -276,7 +332,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-veni">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Veni</div>
                                             </div>
                                         </figure>
@@ -288,7 +344,7 @@
                                     <p class=" heading">
                                         <figure class="image is-128x128">
                                             <img id="team-victor">
-                                            <div class="overlay">
+                                            <div class="overlay is-radius">
                                                 <div class="text">Victor</div>
                                             </div>
                                         </figure>
@@ -305,9 +361,12 @@
     <footer class="footer">
         <div class="container">
             <div class="content has-text-centered">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure assumenda quos beatae id, at adipisci! Cupiditate nulla voluptatum
-                    at tempora nesciunt eum nam odio, unde voluptas sint, consequuntur libero molestiae?
+                <p class="is-paddingless">
+                    Feito com
+                    <figure class="image is-48x48" style="margin: 0 auto">
+                        <img id="heart" alt="">
+                    </figure>
+                    Pelo time de IM da @BAZI
                 </p>
             </div>
         </div>
