--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
                     <div class="content">
                         <h5>
                             <strong>Analises</strong>
-                            <small>@lucasp</small>
+                            <small>Lucas Pires @SO</small>
                         </h5>
                         <p>
                             O time de analise são os responsáveis por extrair os dados e estrutura-los de uma forma que facilite o entendimento e analise
@@ -110,7 +110,7 @@
                     <div class="content">
                         <h5>
                             <strong>Process evolution</strong>
-                            <small>@biamarci</small>
+                            <small>Bia Marci @RJ</small>
                         </h5>
                         <p>
                             Equipe mais voltada a BI trabalhando com a evolução de processos em OGX e ICX para podermos melhorar nossas conversões. Um
@@ -133,7 +133,7 @@
                     <div class="content">
                         <h5>
                             <strong>News</strong>
-                            <small>@lucasT</small>
+                            <small>Lucas Torres @SS</small>
                         </h5>
                         <p>
                             O "time da news" é responsável pela produção da IM news que deve ser liberada para a @BAZI. Na news contém informações sobre
