removendo links temporariamente

--- a/index.html
+++ b/index.html
@@ -162,45 +162,45 @@
         <nav class="level">
             <div class="level-item">
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=1ax474Wy5MtL1x_mt3upJXbGgSRqfaj4_" target="_blank">
+                    <!-- <a href="https://drive.google.com/open?id=1ax474Wy5MtL1x_mt3upJXbGgSRqfaj4_" target="_blank"> -->
                         <img id="analise-icx" alt="Analise de completeds ICX">
                         <div class="overlay">
                             <div class="text">Analise de completeds ICX</div>
                         </div>
-                    </a>
+                    <!-- </a> -->
                 </figure>
             </div>
             <div class="level-item">
 
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=1MQKK7sLwUDNifF_UVmfg441W1P-L8v4g" target="_blank">
+                    <!-- <a href="https://drive.google.com/open?id=1MQKK7sLwUDNifF_UVmfg441W1P-L8v4g" target="_blank"> -->
                         <img id="analise-ogx" alt="Analise de completeds OGX">
                         <div class="overlay">
                             <div class="text">Analise de completeds OGX</div>
                         </div>
-                    </a>
+                    <!-- </a> -->
                 </figure>
             </div>
             <div class="level-item">
 
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=1_E-pzBaCUlBn6Q1syDjoR1rPmF7jhkGP" target="_blank">
+                    <!-- <a href="https://drive.google.com/open?id=1_E-pzBaCUlBn6Q1syDjoR1rPmF7jhkGP" target="_blank"> -->
                         <img id="analise-apicx" alt="Analise Applications ICX">
                         <div class="overlay">
                             <div class="text">Analise Applications ICX</div>
-                        </div>
+                        <!-- </div> -->
                     </a>
                 </figure>
             </div>
             <div class="level-item">
 
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=1BwQNy4G4cVwSTRsezkEiDaJ6V6OaWJAd" target="_blank">
+                    <!-- <a href="https://drive.google.com/open?id=1BwQNy4G4cVwSTRsezkEiDaJ6V6OaWJAd" target="_blank"> -->
                         <img id="analise-apogx" alt="Analise Applications OGX">
                         <div class="overlay">
                             <div class="text">Analise Applications OGX</div>
                         </div>
-                    </a>
+                    <!-- </a> -->
                 </figure>
             </div>
         </nav>
