mudanças de fevereiro

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="navbar-brand">
             <a class="navbar-item" href="#begin">
                 <img id="logo" height="108">
+                <p>Fevereiro 2018</p>
             </a>
             <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
                 <span></span>
@@ -30,11 +31,14 @@
                 <a class="navbar-item" href="#whoweare">
                     Quem somos ?
                 </a>
-                <a class="navbar-item" href="#areas">
-                    Àreas
+                <a class="navbar-item" href="#changes">
+                    Mudanças
                 </a>
-                <a class="navbar-item" href="#education">
-                    Educacional
+                <a class="navbar-item" href="#whatisnew">
+                    O que há de novo IM?
+                </a>
+                <a class="navbar-item" href="#hub">
+                    Hub de Aplicantes
                 </a>
                 <a class="navbar-item" href="#ourteam">
                     Nosso Time
@@ -50,9 +54,6 @@
                 <h1 class="title is-size-1 has-text-white">
                     <img height="400" alt="Logo time IM" id="logo-presentation">
                 </h1>
-                <h2 class="subtitle has-text-white">
-                    Janeiro 18
-                </h2>
             </div>
         </div>
     </section>
@@ -60,7 +61,7 @@
         <div>
 
             <div class="container">
-                <h1 class="title">Quem somos ?</h1>
+                <h1 class="title">Quem somos nós ?</h1>
 
                 <p>
                     A área de Information Management (IM) é a responsável principal pela gestão de plataformas com o objetivo de alavancar os
@@ -74,27 +75,42 @@
         </div>
     </section>
     <hr>
-    <section class="section" id="areas">
+    <section class="section" id="changes">
+        <div>
+
+            <div class="container">
+                <h1 class="title">Mudanças no time ?</h1>
+
+                <p>
+                    No ano passado, o time contava com três times (Análises, Process Evolution e News/Education). Por questões de melhoria na
+                    funcionalidade do time para atender as muitas demandas, mudamos nossa estrutura! Para o 1o Semestre de
+                    2018 trabalharemos com dois times: User Experience/Process Evolution e Análises.
+                </p>
+            </div>
+        </div>
+    </section>
+    <hr>
+    <section class="section" id="whatisnew">
 
         <div class="container">
-            <h1 class="title">Nosso time tem três àreas</h1>
+            <h1 class="title">O que há de novo IM ?</h1>
             <article class="media">
                 <div class="media-content">
                     <div class="content">
                         <h5>
                             <strong>Analises</strong>
-                            <small>Lucas Pires @SO</small>
+                            <small>TUTU @FO</small>
                         </h5>
                         <p>
-                            O time de analise são os responsáveis por extrair os dados e estrutura-los de uma forma que facilite o entendimento e analise
-                            do mesmo. Para executar tais tarefas o time trabalho muito forte com linguagens de programação
-                            e ferramentas para desenvolvimento. As extração englobam basicamente, extração de dados do EXPA,
-                            PODIO e Bazicon e consistem basicamente em dados referente analise de supply entre comitês, analise
-                            d conversão de processos e exportaçoes de Finishers e Completeds que eventualmente serão disponibilizados
-                            para toda a rede. Quanto a questao de estruturação, atualmente estamos trabalhando em um projeto
-                            para criar um dashboard onde iremos centralizar os dados, informações e analises nao so de IM
-                            mas tambem as analises que sao feitas pelos MC ODs por exemplo. Alem desse dashboard, estamos
-                            desenvolvendo um template para nossas newsletters de IM.
+                            O nome é bem sugestivo, porém não é só de números que vive o time de análises! O Objetivo do time (carinhosamente apelidado
+                            de anamíticos) é fornecer insumos para o MC e alguns times de NST's (principalmente front office).
+                            Esses insumos são, em sua maioria, estudos para entender o comportamento dos EP's da BAZI (tanto
+                            de OGX quanto de ICX). Os anamíticos são muito ambiciosos e têm como objetivo ter 100% de integração
+                            entre o Expa e o Pódio! A fase agora é de extração e coleta de dados, porém o time tem ideias
+                            para tratar esses dados de forma estatística. Depois disso, a ideia é usar softwares para melhorar
+                            a visualização desses resultados e, assim, a rede poderá usufruir melhor dos dados tratados.
+                            Indo por esse caminho, algumas automatizações de exportações de dados já começaram a ser feitos
+                            e já estão sendo usados tanto para alimentar o IM HUB quanto o MC.
                         </p>
                     </div>
                 </div>
@@ -109,16 +125,17 @@
                 <div class="media-content">
                     <div class="content">
                         <h5>
-                            <strong>Process evolution</strong>
-                            <small>Bia Marci @RJ</small>
+                            <strong>User Experience/ Process evolution</strong>
+                            <small>Maneco @FO</small>
                         </h5>
                         <p>
-                            Equipe mais voltada a BI trabalhando com a evolução de processos em OGX e ICX para podermos melhorar nossas conversões. Um
-                            time com corner muito forte com operações, com o objetivo de dar um suporte tecnológico, trazendo
-                            sempre inovações e ferramentas pra otimizar nossos processos. Tem como objetivo a automatização
-                            de processos de toda a @BAZI, sabe aquele trabalho manual chato que você tem como fazer todos
-                            os dias ? pois é a gente tenta acabar com ele para que você possa se dedicar ao que mais importa
-                            para a gente. o atendimento humano aos nossos eps e claro no seu desenvolivmento de liderança.
+                            No mês de fevereiro duas palavras resumem o trabalho desse time: Parcerias e corners. Teve de tudo. Teve reconstrução da
+                            Sales page e do Business Blog da AIESEC no Brasil. Teve refresh no site da aiesec.org.br para
+                            torná-lo mais user e mobile friendly. Teve presença nos dois summit's, um de B2C com automatização
+                            no envio de SMS para todos os inscritos OGX da @BAZI e um de B2B com criação de Lead Nurturing
+                            para ICX no Podio e automatização no envio de emails. Confira algumas mudanças no link abaixo!
+                            <br>
+                            <b> Sales page e Business Blog: business.aiesec.org.br</b>
                         </p>
                     </div>
                 </div>
@@ -128,41 +145,17 @@
                     </p>
                 </figure>
             </article>
-            <article class="media">
-                <div class="media-content">
-                    <div class="content">
-                        <h5>
-                            <strong>News</strong>
-                            <small>Lucas Torres @SS</small>
-                        </h5>
-                        <p>
-                            O "time da news" é responsável pela produção da IM news que deve ser liberada para a @BAZI. Na news contém informações sobre
-                            IM, evoluções da área e modificações relacionadas à novas tecnologias implantadas na AIESEC no
-                            Brasil e no Mundo. Além dessas informações, são colocadas na news análises feitas dos escritórios
-                            e das operações, como produtividade, ranking, conversões e dados de comparação com top CLs no
-                            Brasil e no mundo. Cabe ao time sempre trazer informações novas sobre esse tema e agregar da
-                            melhor forma possível à news com insights e formas visuais de enxergar os dados.
-                        </p>
-                    </div>
-                </div>
-                <figure class="media-right">
-                    <br>
-                    <p class="image is-128x128">
-                        <img id="area-news">
-                    </p>
-                </figure>
-            </article>
         </div>
     </section>
     <hr>
-    <h1 class="is-size-4 is-marginless is-uppercase has-text-centered">
-        Confere nosso HUB de aplicantes
-    </h1>
-    <section class="section">
+    <section class="section" id="hub">
+        <h1 class="is-size-4 is-marginless is-uppercase has-text-centered">
+            Confere nosso HUB de aplicantes
+        </h1>
         <nav class="level">
             <div class="level-item">
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=1duCqEG40cifmk_KQt4nz4XGKuzsUpoSJ" target="_blank">
+                    <a href="https://drive.google.com/open?id=1ax474Wy5MtL1x_mt3upJXbGgSRqfaj4_" target="_blank">
                         <img id="analise-icx" alt="Analise de completeds ICX">
                         <div class="overlay">
                             <div class="text">Analise de completeds ICX</div>
@@ -173,7 +166,7 @@
             <div class="level-item">
 
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=1Lxam_x7qUz9QBndYj47CZ-UP8xP7So8I" target="_blank">
+                    <a href="https://drive.google.com/open?id=1MQKK7sLwUDNifF_UVmfg441W1P-L8v4g" target="_blank">
                         <img id="analise-ogx" alt="Analise de completeds OGX">
                         <div class="overlay">
                             <div class="text">Analise de completeds OGX</div>
@@ -184,7 +177,7 @@
             <div class="level-item">
 
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=14p7Rwx1Qkivh6Fa2Pwe5LE5HPbD5jKQW" target="_blank">
+                    <a href="https://drive.google.com/open?id=1_E-pzBaCUlBn6Q1syDjoR1rPmF7jhkGP" target="_blank">
                         <img id="analise-apicx" alt="Analise Applications ICX">
                         <div class="overlay">
                             <div class="text">Analise Applications ICX</div>
@@ -195,7 +188,7 @@
             <div class="level-item">
 
                 <figure class="image is-2by1">
-                    <a href="https://drive.google.com/open?id=13MhaKjKotuCP5GGBwi7dcw-WRMWgrXuv" target="_blank">
+                    <a href="https://drive.google.com/open?id=1BwQNy4G4cVwSTRsezkEiDaJ6V6OaWJAd" target="_blank">
                         <img id="analise-apogx" alt="Analise Applications OGX">
                         <div class="overlay">
                             <div class="text">Analise Applications OGX</div>
@@ -217,45 +210,21 @@
                                 <div>
                                     <p class="heading has-text-centered">
                                         </p><figure class="image is-128x128">
+                                            <img id="team-rodolfo">
+                                            <div class="overlay is-radius">
+                                                <div class="text">Rodolfo</div>
+                                            </div>
+                                        </figure>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="level-item has-text-centered">
+                                <div>
+                                    <p class="heading has-text-centered">
+                                        </p><figure class="image is-128x128">
                                             <img id="team-artur">
                                             <div class="overlay is-radius">
                                                 <div class="text">TuTu</div>
-                                            </div>
-                                        </figure>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="level-item has-text-centered">
-                                <div>
-                                    <p class="title">
-                                        </p><figure class="image is-128x128">
-                                            <img id="team-bia">
-                                            <div class="overlay is-radius">
-                                                <div class="text">Bia</div>
-                                            </div>
-                                        </figure>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="level-item has-text-centered">
-                                <div>
-                                    <p class="heading">
-                                        </p><figure class="image is-128x128">
-                                            <img id="team-lucasp">
-                                            <div class="overlay is-radius">
-                                                <div class="text">LucasP</div>
-                                            </div>
-                                        </figure>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="level-item has-text-centered">
-                                <div>
-                                    <p class="heading">
-                                        </p><figure class="image is-128x128">
-                                            <img id="team-lucast">
-                                            <div class="overlay is-radius">
-                                                <div class="text">lucasT</div>
                                             </div>
                                         </figure>
                                     <p></p>
@@ -273,6 +242,12 @@
                                     <p></p>
                                 </div>
                             </div>
+                        </nav>
+                    </div>
+                </div>
+                <div class="columns">
+                    <div class="column">
+                        <nav class="level">
                             <div class="level-item has-text-centered">
                                 <div>
                                     <p class="heading">
@@ -285,24 +260,6 @@
                                     <p></p>
                                 </div>
                             </div>
-                        </nav>
-                    </div>
-                </div>
-                <div class="columns">
-                    <div class="column">
-                        <nav class="level">
-                            <div class="level-item has-text-centered">
-                                <div>
-                                    <p class="heading has-text-centered">
-                                        </p><figure class="image is-128x128">
-                                            <img id="team-rodolfo">
-                                            <div class="overlay is-radius">
-                                                <div class="text">Rodolfo</div>
-                                            </div>
-                                        </figure>
-                                    <p></p>
-                                </div>
-                            </div>
                             <div class="level-item has-text-centered">
                                 <div>
                                     <p class="title">
@@ -310,6 +267,18 @@
                                             <img id="team-pablo">
                                             <div class="overlay is-radius">
                                                 <div class="text">Pablo</div>
+                                            </div>
+                                        </figure>
+                                    <p></p>
+                                </div>
+                            </div>
+                            <div class="level-item has-text-centered">
+                                <div>
+                                    <p class="heading">
+                                        </p><figure class="image is-128x128">
+                                            <img id="team-jp">
+                                            <div class="overlay is-radius">
+                                                <div class="text">João Paulo</div>
                                             </div>
                                         </figure>
                                     <p></p>
@@ -334,18 +303,6 @@
                                             <img id="team-veni">
                                             <div class="overlay is-radius">
                                                 <div class="text">Veni</div>
-                                            </div>
-                                        </figure>
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div class="level-item has-text-centered">
-                                <div>
-                                    <p class="heading">
-                                        </p><figure class="image is-128x128">
-                                            <img id="team-victor">
-                                            <div class="overlay is-radius">
-                                                <div class="text">Victor</div>
                                             </div>
                                         </figure>
                                     <p></p>
